tests/neg/java-fake-ann-separate/Test_2.scala
@FakeAnn_1 def test = // error
  (1: @FakeAnn_1) // error

